labs/network-policies/pod-frontend.yml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-np
  labels:
    app: frontend-np
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
