labs/network-policies/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-np-svc
spec:
  selector:
    app: backend-np
  ports:
    - port: 80
      targetPort: 80
