labs/network-policies/permit-all-trafic.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
spec:
  podSelector:
    matchLabels:
      app: backend-np
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend-np
